GearsetPOC/force-app/main/default/objects/Redshift_Membership_Tier_History__c/Redshift_Membership_Tier_History__c.object-meta.xml
<CustomObject>
    <label>Redshift Membership Tier History</label>
    <nameField>
        <displayFormat>RMN-{0000000000}</displayFormat>
        <label>Redshift Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Redshift Membership Tier History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>