GearsetPOC/force-app/main/default/objects/Redshift_Membership_Tier_History__c/fields/FromTier__c.field-meta.xml
<CustomField>
    <fullName>FromTier__c</fullName>
    <label>FromTier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>