GearsetPOC/force-app/main/default/objects/Redshift_Membership_Tier_History__c/fields/FromTierStartDate__c.field-meta.xml
<CustomField>
    <fullName>FromTierStartDate__c</fullName>
    <label>FromTierStartDate</label>
    <type>DateTime</type>
</CustomField>