GearsetPOC/force-app/main/default/objects/Redshift_Membership_Tier_History__c/fields/MemberCard__c.field-meta.xml
<CustomField>
    <fullName>MemberCard__c</fullName>
    <label>MemberCard</label>
    <length>17</length>
    <type>Text</type>
</CustomField>