GearsetPOC/force-app/main/default/objects/Redshift_Membership_Tier_History__c/fields/ReasonCode1__c.field-meta.xml
<CustomField>
    <fullName>ReasonCode1__c</fullName>
    <label>ReasonCode1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>