GearsetPOC/force-app/main/default/objects/Redshift_Membership_Tier_History__c/fields/ReasonText__c.field-meta.xml
<CustomField>
    <fullName>ReasonText__c</fullName>
    <label>ReasonText</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>