GearsetPOC/force-app/main/default/objects/Redshift_Membership_Tier_History__c/fields/SubTierAtTimeOfTierChange__c.field-meta.xml
<CustomField>
    <fullName>SubTierAtTimeOfTierChange__c</fullName>
    <label>SubTierAtTimeOfTierChange</label>
    <length>255</length>
    <type>Text</type>
</CustomField>