GearsetPOC/force-app/main/default/objects/Redshift_Membership_Tier_History__c/fields/ToTier__c.field-meta.xml
<CustomField>
    <fullName>ToTier__c</fullName>
    <label>ToTier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>