GearsetPOC/force-app/main/default/objects/Redshift_Membership_Tier_History__c/fields/ToTierStartDate__c.field-meta.xml
<CustomField>
    <fullName>ToTierStartDate__c</fullName>
    <label>ToTierStartDate</label>
    <type>DateTime</type>
</CustomField>