GearsetPOC/force-app/main/default/objects/Redshift_Membership_Tier_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MemberCard__c</columns>
    <columns>MemberSalesforceId__c</columns>
    <columns>FromTier__c</columns>
    <columns>FromTierStartDate__c</columns>
    <columns>ReasonCode1__c</columns>
    <columns>ReasonCode2__c</columns>
    <columns>ReasonText__c</columns>
    <columns>ToTier__c</columns>
    <columns>ToTierStartDate__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>